--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ application {
     mainClass = 'org.example.Main'  // Replace with your actual main class
 }
 
-
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
@@ -16,22 +15,17 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // TestNG and Selenium for testing
+    testImplementation 'org.testng:testng:7.10.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
 }
-
-
 
 test {
-    useJUnitPlatform()
-}
-
-dependencies {
-    testImplementation 'org.testng:testng:7.11.0'
-}
-
-dependencies {
-    implementation 'org.seleniumhq.selenium:selenium-java:4.33.0'
+    useTestNG()
+    outputs.upToDateWhen { false } // Always re-run tests
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 jar {
@@ -41,6 +35,8 @@ jar {
         )
     }
 }
+
+
 
 
 
